tests-integration/fixtures/checking/1772564880_derive_eq_1/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Id :: forall (@a :: Type). (a :: Type) -> Id (a :: Type)
Pair :: forall (@a :: Type). (a :: Type) -> (a :: Type) -> Pair (a :: Type)
Mixed :: forall (@a :: Type). Int -> (a :: Type) -> Boolean -> Mixed (a :: Type)
Rec :: forall (@a :: Type). { count :: Int, value :: (a :: Type) } -> Rec (a :: Type)
Wrap ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    Wrap @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))
Compose ::
  forall (t :: Type) (t1 :: Type) (@f :: (t :: Type) -> Type) (@g :: (t1 :: Type) -> (t :: Type))
    (@a :: (t1 :: Type)).
    (f :: (t :: Type) -> Type) ((g :: (t1 :: Type) -> (t :: Type)) (a :: (t1 :: Type))) ->
    Compose @(t :: Type) @(t1 :: Type)
      (f :: (t :: Type) -> Type)
      (g :: (t1 :: Type) -> (t :: Type))
      (a :: (t1 :: Type))
Left' :: forall (@a :: Type). (a :: Type) -> Either' (a :: Type)
Right' :: forall (@a :: Type). (a :: Type) -> Either' (a :: Type)
NoEq :: forall (@a :: Type). (a :: Type) -> NoEq (a :: Type)

Types
Id :: Type -> Type
Pair :: Type -> Type
Mixed :: Type -> Type
Rec :: Type -> Type
Wrap :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type
Compose ::
  forall (t :: Type) (t1 :: Type).
    ((t :: Type) -> Type) -> ((t1 :: Type) -> (t :: Type)) -> (t1 :: Type) -> Type
Either' :: Type -> Type
NoEq :: Type -> Type

Derived
derive forall (t :: Type). Eq (t :: Type) => Eq (Id (t :: Type))
derive Eq1 Id
derive forall (t :: Type). Eq (t :: Type) => Eq (Pair (t :: Type))
derive Eq1 Pair
derive forall (t :: Type). Eq (t :: Type) => Eq (Mixed (t :: Type))
derive Eq1 Mixed
derive forall (t :: Type). Eq (t :: Type) => Eq (Rec (t :: Type))
derive Eq1 Rec
derive forall (t :: Type -> Type) (t1 :: Type).
  Eq1 (t :: Type -> Type) => Eq (t1 :: Type) => Eq (Wrap @Type (t :: Type -> Type) (t1 :: Type))
derive forall (t :: Type -> Type). Eq1 (t :: Type -> Type) => Eq1 (Wrap @Type (t :: Type -> Type))
derive forall (t :: Type -> Type) (t1 :: Type) (t2 :: (t1 :: Type) -> Type) (t3 :: (t1 :: Type)).
  Eq1 (t :: Type -> Type) =>
  Eq ((t2 :: (t1 :: Type) -> Type) (t3 :: (t1 :: Type))) =>
  Eq
    (Compose @Type @(t1 :: Type)
      (t :: Type -> Type)
      (t2 :: (t1 :: Type) -> Type)
      (t3 :: (t1 :: Type)))
derive forall (t :: Type -> Type) (t1 :: Type -> Type).
  Eq1 (t :: Type -> Type) => Eq1 (Compose @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))
derive forall (t :: Type). Eq (t :: Type) => Eq (Either' (t :: Type))
derive Eq1 Either'
derive Eq1 NoEq

Roles
Id = [Representational]
Pair = [Representational]
Mixed = [Representational]
Rec = [Representational]
Wrap = [Representational, Nominal]
Compose = [Representational, Representational, Nominal]
Either' = [Representational]
NoEq = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ((t :: Type -> Type) (t1 :: Type))
  --> 34:1..34:43
   |
34 | derive instance Eq1 f => Eq1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Eq1 (t2 :: Type -> Type) is in scope
  trivia: Eq (t1 :: Type) is in scope
error[NoInstanceFound]: No instance found for: Eq (NoEq (t3 :: Type))
  --> 43:1..43:25
   |
43 | derive instance Eq1 NoEq
   | ^~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Eq (t3 :: Type) is in scope
